--- a/pages/LinePage.page
+++ b/pages/LinePage.page
@@ -1,4 +1,4 @@
-<apex:page id="lineLoginPage" docType="html-5.0" controller="LineLogin" sidebar="false" standardStylesheets="false" showHeader="false" applyHtmlTag="false" applyBodyTag="false" cache="false">
+<apex:page id="linePage" docType="html-5.0" controller="LineLogin" sidebar="false" standardStylesheets="false" showHeader="false" applyHtmlTag="false" applyBodyTag="false" cache="false">
 <html lang="ja">
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"></link>
